Use local static persistentSuppot and persistentObject variables.